--- a/package.json
+++ b/package.json
@@ -2,20 +2,38 @@
   "name": "accommodation-resources",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://johndunking.github.io/accommodation-resources",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "cors": "^2.8.5",
+    "drawsvg": "^1.1.0",
+    "express": "^4.18.2",
+    "gsap": "file:gsap-bonus.tgz",
+    "gsap-drawsvg": "^1.0.0",
+    "nodemon": "^3.0.1",
+    "proxy": "^2.1.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-router": "^6.16.0",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "sass": "^1.68.0",
+    "web-vitals": "^2.1.4",
+    "ws": "^8.14.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start:frontend": "react-scripts start",
+    "start:backend": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
   }
 }
