--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "accommodation-resources",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://johndunking.github.io/accommodation-resources",
+  "homepage": "https://johndunking.github.io/accommodation-resources",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -27,13 +27,14 @@
     "ws": "^8.14.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start:frontend": "react-scripts start",
     "start:backend": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+   
   },
   "eslintConfig": {
     "extends": [
