--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "accommodation-resources",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "certbot": "^5.0.3",
     "cors": "^2.8.5",
     "drawsvg": "^1.1.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "gsap": "file:gsap-bonus.tgz",
     "gsap-drawsvg": "^1.0.0",
     "nodemon": "^3.0.1",
+    "path": "^0.12.7",
     "proxy": "^2.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
@@ -34,7 +36,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-   
   },
   "eslintConfig": {
     "extends": [
