--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start:frontend": "react-scripts start",
-    "start:backend": "nodemon server.js",
+    "start:backend": "nodemon completions.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
