--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.2",
     "certbot": "^5.0.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "drawsvg": "^1.1.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
