--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "drawsvg": "^1.1.0",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "got": "^13.0.0",
     "gsap": "file:gsap-bonus.tgz",
     "gsap-drawsvg": "^1.0.0",
     "heroku": "^8.6.0",
@@ -24,6 +25,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-native-fetch-api": "^3.0.0",
+    "react-native-polyfill-globals": "^3.1.0",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
