--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +16,7 @@
     "dotenv": "^16.3.1",
     "drawsvg": "^1.1.0",
     "express": "^4.18.2",
+    "framer-motion": "^10.16.5",
     "fs": "^0.0.1-security",
     "got": "^13.0.0",
     "gsap": "file:gsap-bonus.tgz",
@@ -31,6 +35,7 @@
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "sass": "^1.68.0",
+    "sse": "github:mpetazzoni/sse.js",
     "web-vitals": "^2.1.4",
     "ws": "^8.14.2"
   },
